--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ classifiers = [
 ]
 dynamic = ["version"]
 dependencies = [
-    "pydantic-settings>=2.0,<2.2",
+    "pydantic-settings>=2.0",
 ]
 
 [project.optional-dependencies]
